# VScout

./: .gitignore  Makefile  README.md  stuff.md
vibescout_backend/: ROBOT_ACTIONS_API.md  TBA_IMPORT_README.md  db.sqlite3  main.py  pyproject.toml
vibescout_backend/backend/: admin.py  api.py  apps.py  models.py  schedule_setup.py  schemas.py  settings.py  tasks.py  urls.py
vibescout_backend/backend/management/commands/: add_blank_matches.py  add_match.py  download_match_videos.py  generate_competition.py  import_tba_events.py  init_competition.py  setup_competition.py  (+2 more)
vibescout_backend/backend/migrations/: 0001_initial.py  0002_match_match_number.py  0006_match_has_played_match_match_type.py  0007_match_set_number.py  0008_match_end_match_time_match_predicted_match_time_and_more.py  0009_competition_offset_stream_time_to_unix_timestamp_day_1_and_more.py  0010_robotaction_delete_shottiming.py  0011_match_blue_auto_points_match_blue_endgame_points_and_more.py  0012_alter_teaminfo_options_and_more.py  0013_alter_teaminfo_options_teaminfo_rank.py  0014_teaminfo_auto_success_teaminfo_auto_success_sd_and_more.py  0015_alter_robotaction_end_time_and_more.py  0016_remove_teaminfo_auto_success_and_more.py  0017_match_blue_1_auto_climb_match_blue_2_auto_climb_and_more.py  0018_teaminfo_avg_fuel_sd.py  0019_match_blue_penalties_match_red_penalties_and_more.py  0020_change_picture_to_base64.py  0021_add_robot_action_fields.py  0022_match_video_available.py
vibescout_backend/backend/utils/: match_utils.py  video_downloader.py
vibescout_backend/score_ocr/: score_ocr.py
(+74 files in other folders)
