[project]
name = "vibescout-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "django-ninja>=1.5.3",
    "pillow>=12.1.0",
    "tbapy>=1.3.2",
    "python-dotenv>=1.0.0",
    "django-cors-headers>=4.9.0",
    "yt-dlp>=2025.12.8",
    "pytesseract>=0.3.13",
    "ffmpeg-python>=0.2.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.9",
]
